<resources>
    <string name="app_name">Rhodium Project</string>
    <string name="StrengthData">Get Data</string>
    <string name="Serving_cell_strength">Serving cell strength</string>
    <string name="Neighbor_cell_strength">Neighbor cell strength</string>
    <string name="Serving_cell_quality">Serving cell quality</string>
    <string name="Neighbor_cell_quality">Neighbor cell quality</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="StartButton">Start</string>
    <string name="mapbox_access_token">pk.eyJ1IjoidG1vaiIsImEiOiJjazNpaGdwZ3cwNXowM2JvMXpxMXcxcHRsIn0.oNXsSNYPmCwJjW9PZvGeLg</string>
    <string name="Button">Start Online</string>
    <string name="title">Rhoduim Project</string>
    <string name="start_ofline">Start Ofline</string>
    <string name="RSRP_ServingCell">rsrp_sc</string>
    <string name="cell_id">cellid</string>
    <string name="RSRQ_ServingCell">rsrq_sc</string>
    <string name="CINR">cinr</string>
    <string name="TAC">tac</string>
    <string name="PLMN">plmn</string>
    <string name="save">save</string>
    <string name="id">ID</string>
    <string name="rsrp_nc">rsrp_nc</string>
    <string name="rsrq_nc">rsrq_nc</string>
    <string name="all">all</string>
</resources>
